<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pienkowska.swim.lottery.MainActivity">
    <item
        android:id="@+id/action_check"
        android:orderInCategory="100"
        android:icon="@drawable/ic_check_circle_white_24dp"
        android:title="@string/action_check"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_rewards"
        android:orderInCategory="100"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:title="@string/action_rewards"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_visit_lotto"
        android:orderInCategory="100"
        android:title="@string/action_visit_lotto"
        app:showAsAction="never" />
</menu>
